--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3730,7 +3730,7 @@ body {
 /* Main background */
 
 .bg-primary {
-    background-color: #20b2aa !important;
+    background-color: #2A66B2 !important;
 }
 
 .bg-info {
