--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5500,7 +5500,7 @@ Created using IcoMoon - icomoon.io
 .page-header .page-header-image {
     position: absolute;
     background-size: cover;
-    background-position: center top;
+    background-position: center center;
     width: 100%;
     height: 100%;
     z-index: -1;
@@ -7484,7 +7484,7 @@ Created using IcoMoon - icomoon.io
 .cc-profile-image a:before {
     content: "";
     /* background color */
-    border: 15px solid rgba(42, 220, 226, 0.6);
+    border: 15px solid rgba(42, 102, 178, 0.6);
     border-radius: 50%;
     height: 180px;
     width: 180px;
