--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5500,7 +5500,7 @@ Created using IcoMoon - icomoon.io
 .page-header .page-header-image {
     position: absolute;
     background-size: cover;
-    background-position: bottom right;
+    background-position: center center;
     width: 100%;
     height: 100%;
     z-index: -1;
