--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5498,7 +5498,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .page-header .page-header-image {
-    position: relative;
+    position: absolute;
     background-size: cover;
     background-position: center center;
     width: 100%;
