--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,7 +31,7 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  */
 
-.bootstrap-switch {
+ .bootstrap-switch {
     display: inline-block;
     direction: ltr;
     cursor: pointer;
@@ -627,7 +627,7 @@
 }
 
 .slider.slider-primary .noUi-handle {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .slider.slider-info .noUi-connect,
@@ -710,7 +710,7 @@
 }
 
 .datepicker.datepicker-primary {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .datepicker.datepicker-primary th,
@@ -720,11 +720,11 @@
 }
 
 .datepicker.datepicker-primary:after {
-    border-bottom-color: #2A66B2;
+    border-bottom-color: #20b2aa;
 }
 
 .datepicker.datepicker-primary.datepicker-orient-top:after {
-    border-top-color: #2A66B2;
+    border-top-color: #20b2aa;
 }
 
 .datepicker.datepicker-primary .dow {
@@ -755,7 +755,7 @@
 .datepicker.datepicker-primary table tr td.active.disabled div,
 .datepicker.datepicker-primary table tr td.active.disabled:hover div {
     background-color: #FFFFFF;
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .datepicker.datepicker-primary table tr td.day:hover div,
@@ -826,7 +826,7 @@
 .datepicker.datepicker-primary table tr td span.active:hover[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled:hover[disabled] {
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .datepicker-inline {
@@ -935,7 +935,7 @@
 }
 
 .datepicker th {
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .table-condensed>tbody>tr>td,
@@ -1145,7 +1145,7 @@
 .datepicker table tr td.active:hover div,
 .datepicker table tr td.active.disabled div,
 .datepicker table tr td.active.disabled:hover div {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
     color: #FFFFFF;
     -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
@@ -1171,7 +1171,7 @@
 .datepicker table tr td.active:hover[disabled] div,
 .datepicker table tr td.active.disabled[disabled] div,
 .datepicker table tr td.active.disabled:hover[disabled] div {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .datepicker table tr td.active:active,
@@ -1214,7 +1214,7 @@
 .datepicker table tr td span.active.disabled,
 .datepicker table tr td span.active.disabled:hover {
     color: #fff;
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .datepicker table tr td span.active:hover,
@@ -1237,7 +1237,7 @@
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
     -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
 }
@@ -1620,27 +1620,27 @@ fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus,
 fieldset[disabled] .btn-primary:active,
 fieldset[disabled] .btn-primary.active {
-    background-color: #2A66B2;
-    border-color: #2A66B2;
+    background-color: #20b2aa;
+    border-color: #20b2aa;
 }
 
 .btn-primary.btn-simple {
-    color: #2A66B2;
-    border-color: #2A66B2;
+    color: #20b2aa;
+    border-color: #20b2aa;
 }
 
 .btn-primary.btn-simple:hover,
 .btn-primary.btn-simple:focus,
 .btn-primary.btn-simple:active {
     background-color: transparent;
-    color: #2A66B2;
-    border-color: #2A66B2;
+    color: #20b2aa;
+    border-color: #20b2aa;
     -webkit-box-shadow: none;
     box-shadow: none;
 }
 
 .btn-primary.btn-link {
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .btn-primary.btn-link:hover,
@@ -1991,7 +1991,7 @@ fieldset[disabled] .btn-danger.active {
 
 .btn-neutral {
     background-color: #FFFFFF;
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .btn-neutral:hover,
@@ -2311,7 +2311,7 @@ fieldset[disabled] .btn-link.active {
 }
 
 .form-control:focus {
-    border: 1px solid #2A66B2;
+    border: 1px solid #20b2aa;
     -webkit-box-shadow: none;
     box-shadow: none;
     outline: 0 !important;
@@ -2320,7 +2320,7 @@ fieldset[disabled] .btn-link.active {
 
 .form-control:focus+.input-group-addon,
 .form-control:focus~.input-group-addon {
-    border: 1px solid #2A66B2;
+    border: 1px solid #20b2aa;
     border-left: none;
     background-color: transparent;
 }
@@ -2548,7 +2548,7 @@ fieldset[disabled] .btn-link.active {
 
 .input-group-focus .input-group-addon {
     background-color: #FFFFFF;
-    border-color: #2A66B2;
+    border-color: #20b2aa;
 }
 
 .input-group-focus.form-group-no-border .input-group-addon {
@@ -2860,16 +2860,16 @@ textarea.form-control:active {
 }
 
 .progress-container.progress-primary .progress {
-    background: #2A66B2;
+    background: #20b2aa;
 }
 
 .progress-container.progress-primary .progress-bar {
-    background: #2A66B2;
+    background: #20b2aa;
 }
 
 .progress-container.progress-primary .progress-value,
 .progress-container.progress-primary .progress-badge {
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .progress-container.progress-info .progress {
@@ -2886,16 +2886,16 @@ textarea.form-control:active {
 }
 
 .progress-container.progress-success .progress {
-    background: #2A66B2;
+    background: #20b2aa;
 }
 
 .progress-container.progress-success .progress-bar {
-    background: #2A66B2;
+    background: #20b2aa;
 }
 
 .progress-container.progress-success .progress-value,
 .progress-container.progress-success .progress-badge {
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .progress-container.progress-warning .progress {
@@ -2953,8 +2953,8 @@ textarea.form-control:active {
 }
 
 .badge-primary {
-    border-color: #2A66B2;
-    color: #2A66B2;
+    border-color: #20b2aa;
+    color: #20b2aa;
 }
 
 .badge-info {
@@ -3057,8 +3057,8 @@ textarea.form-control:active {
 .pagination.pagination-primary .page-item.active>.page-link,
 .pagination.pagination-primary .page-item.active>.page-link:focus,
 .pagination.pagination-primary .page-item.active>.page-link:hover {
-    background-color: #2A66B2;
-    border-color: #2A66B2;
+    background-color: #20b2aa;
+    border-color: #20b2aa;
 }
 
 .pagination.pagination-warning .page-item.active>.page-link,
@@ -3090,7 +3090,7 @@ textarea.form-control:active {
 .pagination.pagination-neutral .page-item.active>.page-link:hover {
     background-color: #FFFFFF;
     border-color: #FFFFFF;
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 button,
@@ -3119,12 +3119,12 @@ small {
 }
 
 a {
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 a:hover,
 a:focus {
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 h1,
@@ -3223,7 +3223,7 @@ p.description {
 }
 
 .text-primary {
-    color: #2A66B2 !important;
+    color: #20b2aa !important;
 }
 
 .text-info {
@@ -3261,12 +3261,12 @@ p.description {
 }
 
 .blockquote.blockquote-primary {
-    border-color: #2A66B2;
-    color: #2A66B2;
+    border-color: #20b2aa;
+    color: #20b2aa;
 }
 
 .blockquote.blockquote-primary small {
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .blockquote.blockquote-danger {
@@ -3356,7 +3356,7 @@ body {
 }
 
 .separator.separator-primary {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .nav-pills .nav-item .nav-link {
@@ -3405,13 +3405,13 @@ body {
 .nav-pills.nav-pills-neutral .nav-item .nav-link.active:focus,
 .nav-pills.nav-pills-neutral .nav-item .nav-link.active:hover {
     background-color: #FFFFFF;
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .nav-pills.nav-pills-primary .nav-item .nav-link.active,
 .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus,
 .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .nav-pills.nav-pills-info .nav-item .nav-link.active,
@@ -3540,8 +3540,8 @@ body {
 }
 
 .nav-tabs.nav-tabs-primary>.nav-item>.nav-link.active {
-    border-color: #2A66B2;
-    color: #2A66B2;
+    border-color: #20b2aa;
+    color: #20b2aa;
 }
 
 .nav-tabs.nav-tabs-info>.nav-item>.nav-link.active {
@@ -3560,8 +3560,8 @@ body {
 }
 
 .nav-tabs.nav-tabs-success>.nav-item>.nav-link.active {
-    border-color: #2A66B2;
-    color: #2A66B2;
+    border-color: #20b2aa;
+    color: #20b2aa;
 }
 
 .navbar {
@@ -3730,7 +3730,7 @@ body {
 /* Main background */
 
 .bg-primary {
-    background-color: #2A66B2 !important;
+    background-color: #20b2aa !important;
 }
 
 .bg-info {
@@ -3738,7 +3738,7 @@ body {
 }
 
 .bg-success {
-    background-color: #2A66B2 !important;
+    background-color: #20b2aa !important;
 }
 
 .bg-danger {
@@ -3809,11 +3809,11 @@ body {
 }
 
 .dropdown-menu.dropdown-primary {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .dropdown-menu.dropdown-primary:before {
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .dropdown-menu.dropdown-primary .dropdown-header:not([href]):not([tabindex]) {
@@ -3884,11 +3884,11 @@ body {
 }
 
 .dropdown-menu.dropdown-success {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .dropdown-menu.dropdown-success:before {
-    color: #2A66B2;
+    color: #20b2aa;
 }
 
 .dropdown-menu.dropdown-success .dropdown-header:not([href]):not([tabindex]) {
@@ -4075,7 +4075,7 @@ img {
 }
 
 .popover.popover-primary {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .popover.popover-primary .popover-body {
@@ -4083,19 +4083,19 @@ img {
 }
 
 .popover.popover-primary.bs-popover-right .arrow:after {
-    border-right-color: #2A66B2;
+    border-right-color: #20b2aa;
 }
 
 .popover.popover-primary.bs-popover-top .arrow:after {
-    border-top-color: #2A66B2;
+    border-top-color: #20b2aa;
 }
 
 .popover.popover-primary.bs-popover-bottom .arrow:after {
-    border-bottom-color: #2A66B2;
+    border-bottom-color: #20b2aa;
 }
 
 .popover.popover-primary.bs-popover-left .arrow:after {
-    border-left-color: #2A66B2;
+    border-left-color: #20b2aa;
 }
 
 .popover.popover-primary .popover-header {
@@ -4854,7 +4854,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile i {
-    color: #2A66B2;
+    color: #20b2aa;
     font-size: 21px;
 }
 
@@ -4863,7 +4863,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile.modal-profile-primary {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .modal.modal-mini .modal-profile.modal-profile-danger {
@@ -4900,7 +4900,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-primary .modal-content {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
     color: #FFFFFF;
 }
 
@@ -4991,7 +4991,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .card[data-background-color="orange"] {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .card[data-background-color="red"] {
@@ -5007,7 +5007,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .card[data-background-color="#896800"] {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .card-signup {
@@ -5986,13 +5986,13 @@ Created using IcoMoon - icomoon.io
         transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     }
     .sidebar-collapse .navbar-collapse:before {
-        background: #2A66B2;
+        background: #20b2aa;
         /* For browsers that do not support gradients */
         /* For Safari 5.1 to 6.0 */
         /* For Opera 11.1 to 12.0 */
         /* For Firefox 3.6 to 15 */
-        background: -webkit-gradient(linear, left top, left bottom, from(#2A66B2), color-stop(80%, #000));
-        background: linear-gradient(#2A66B2 0%, #000 80%);
+        background: -webkit-gradient(linear, left top, left bottom, from(#20b2aa), color-stop(80%, #000));
+        background: linear-gradient(#20b2aa 0%, #000 80%);
         /* Standard syntax (must be last) */
         opacity: 0.76;
         filter: alpha(opacity=76);
@@ -6701,13 +6701,13 @@ Created using IcoMoon - icomoon.io
         transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     }
     .burger-menu .navbar-collapse:before {
-        background: #2A66B2;
+        background: #20b2aa;
         /* For browsers that do not support gradients */
         /* For Safari 5.1 to 6.0 */
         /* For Opera 11.1 to 12.0 */
         /* For Firefox 3.6 to 15 */
-        background: -webkit-gradient(linear, left top, left bottom, from(#2A66B2), color-stop(80%, #000));
-        background: linear-gradient(#2A66B2 0%, #000 80%);
+        background: -webkit-gradient(linear, left top, left bottom, from(#20b2aa), color-stop(80%, #000));
+        background: linear-gradient(#20b2aa 0%, #000 80%);
         /* Standard syntax (must be last) */
         opacity: 0.76;
         filter: alpha(opacity=76);
@@ -7484,7 +7484,7 @@ Created using IcoMoon - icomoon.io
 .cc-profile-image a:before {
     content: "";
     /* background color */
-    border: 15px solid rgba(42, 102, 178, 0.6);
+    border: 15px solid rgba(42, 220, 226, 0.6);
     border-radius: 50%;
     height: 180px;
     width: 180px;
@@ -7605,7 +7605,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .cc-reference .carousel-indicators .active {
-    background-color: #2A66B2;
+    background-color: #20b2aa;
 }
 
 .cc-reference .carousel-inner {
