--- a/static/css/main.css
+++ b/static/css/main.css
@@ -68,3 +68,64 @@
     margin-top: 45px;
     padding-bottom: 50px;
 }
+
+
+.page-header {
+    background: rgba(44, 44, 44, 0.2);
+    /* For browsers that do not support gradients */
+    /* For Safari 5.1 to 6.0 */
+    /* For Opera 11.1 to 12.0 */
+    /* For Firefox 3.6 to 15 */
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(44, 44, 44, 0.2)), to(rgba(55, 140, 63, 0.6)));
+    background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(55, 140, 63, 0.6));
+    /* Standard syntax */
+}
+
+.page-header .btn {
+    width: 140px;
+}
+
+
+.cc-profile-image a {
+    position: relative;
+}
+
+.cc-profile-image a:before {
+    content: "";
+    /* background color */
+    border: 15px solid rgba(42, 220, 226, 0.6);
+    border-radius: 50%;
+    height: 180px;
+    width: 180px;
+    position: absolute;
+    left: 0;
+    -webkit-animation: pulsate 1.6s ease-out;
+    animation: pulsate 1.6s ease-out;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    opacity: 0.0;
+    z-index: 99;
+}
+
+.cc-profile-image img {
+    position: relative;
+    border-radius: 50%;
+    height: 180px;
+    width: 180px;
+    padding: 0;
+    margin: 0;
+    border: 15px solid transparent;
+    z-index: 9999;
+    -webkit-transition: all .3s ease-out;
+    transition: all .3s ease-out;
+}
+
+.cc-profile-image a:hover img {
+    -webkit-transform: scale(1.06, 1.06);
+    transform: scale(1.06, 1.06);
+}
+
+.cc-profile-image a:hover:before {
+    -webkit-animation: none;
+    animation: none;
+}
