--- a/static/css/main.css
+++ b/static/css/main.css
@@ -69,6 +69,7 @@
     padding-bottom: 50px;
 }
 
+/* Profile Page Background Style */
 
 .page-header {
     background: rgba(44, 44, 44, 0.2);
@@ -85,6 +86,39 @@
     width: 140px;
 }
 
+/* Profile Image Style */
+
+@-webkit-keyframes pulsate {
+    0% {
+        -webkit-transform: scale(0.6, 0.6);
+        transform: scale(0.6, 0.6);
+        opacity: 0.0;
+    }
+    50% {
+        opacity: 1.0;
+    }
+    100% {
+        -webkit-transform: scale(1, 1);
+        transform: scale(1, 1);
+        opacity: 0.0;
+    }
+}
+
+@keyframes pulsate {
+    0% {
+        -webkit-transform: scale(0.6, 0.6);
+        transform: scale(0.6, 0.6);
+        opacity: 0.0;
+    }
+    50% {
+        opacity: 1.0;
+    }
+    100% {
+        -webkit-transform: scale(1, 1);
+        transform: scale(1, 1);
+        opacity: 0.0;
+    }
+}
 
 .cc-profile-image a {
     position: relative;
