--- a/static/css/main.css
+++ b/static/css/main.css
@@ -69,6 +69,36 @@
     padding-bottom: 50px;
 }
 
+.h2 {
+    font-size: 2.5em;
+    margin-bottom: 30px;
+}
+
+/* Typewriter effect */
+
+body {
+    background-color: #FF5A5A;
+    height: 100%;
+    font-family: 'tradegothiclt-bold', sans-serif;
+  }
+  
+  h1 {
+    font-size: 5em;
+    color: white;
+    text-transform: uppercase;
+  }
+  
+  span {
+    border-right: .05em solid;
+    animation: caret 1s steps(1) infinite;
+  }
+  
+  @keyframes caret {
+    50% {
+      border-color: transparent;
+    }
+  }
+
 /* Profile Page Background Style */
 
 .page-header {
