--- a/static/css/main.css
+++ b/static/css/main.css
@@ -118,7 +118,7 @@ body {
 .page-header .page-header-image {
     position: absolute;
     background-size: cover;
-    background-position: center center;
+    background-position: center top;
     width: 100%;
     height: 100%;
     z-index: -1;
