--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,28 +76,7 @@
 
 /* Typewriter effect */
 
-body {
-    background-color: #FF5A5A;
-    height: 100%;
-    font-family: 'tradegothiclt-bold', sans-serif;
-  }
-  
-  h1 {
-    font-size: 5em;
-    color: white;
-    text-transform: uppercase;
-  }
-  
-  span {
-    border-right: .05em solid;
-    animation: caret 1s steps(1) infinite;
-  }
-  
-  @keyframes caret {
-    50% {
-      border-color: transparent;
-    }
-  }
+
 
 /* Profile Page Background Style */
 
@@ -118,7 +97,7 @@ body {
 .page-header .page-header-image {
     position: absolute;
     background-size: cover;
-    background-position: center top;
+    background-position: center center;
     width: 100%;
     height: 100%;
     z-index: -1;
