--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,22 +76,36 @@
 
 /* Typewriter effect */
 
-html,body {
+.typewriter h1 {
     font-family: 'Raleway', sans-serif;
     padding: 3em 2em;
-    font-size: 18px;
-    background: #222;
-    color: #aaa
+    font-size: 3.5em;
+    font-weight: 200;
+    letter-spacing: .17em;
+    margin: 0 auto;
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: .17em solid pink;
+    animation: typing 3.5s steps(30, end), blinking-cursor .5s step-end infinite;
   }
   
-  h1,h2 {
-    font-weight: 200;
-    margin: 0.4em 0;
+  @keyframes typing {
+    from {
+      width: 0
+    }
+    to {
+      width: 100%
+    }
   }
-  h1 { font-size: 3.5em; }
-  h2 {
-    color: #888;
-    font-size: 2em;
+  
+  @keyframes blinking-cursor {
+    from,
+    to {
+      border-color: transparent
+    }
+    50% {
+      border-color: pink;
+    }
   }
 
 /* Profile Page Background Style */
