--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,212 +1,64 @@
-/*--------------------------------------------------------------
-# Banner
---------------------------------------------------------------*/
-.profile-page .page-header {
-    min-height: 550px;
+@import url(//fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800);
+.static-slider3 {
+  font-family: "Montserrat", sans-serif;
+	color: #8d97ad;
+  font-weight: 300;
+	padding: 10% 0;
 }
 
-.profile-page .profile-container {
-    color: #FFFFFF;
+.static-slider3 h1, .static-slider3 h2, .static-slider3 h3, .static-slider3 h4, .static-slider3 h5, .static-slider3 h6 {
+  color: #3e4555;
 }
 
-.profile-page .photo-container {
-    width: 123px;
-    height: 123px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin: 0 auto;
-    -webkit-box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
+.static-slider3 .title {
+	font-weight: 300;
+  line-height: 50px;
+	font-size: 36px;
 }
 
-.profile-page .title {
-    text-align: center;
-    margin-top: 30px;
+.static-slider3 .title span {
+	border-bottom: 3px solid #2cdd9b;
 }
 
-.profile-page .description,
-.profile-page .category {
-    text-align: center;
+.static-slider3 .text-success-gradiant {
+	  background: #2cdd9b;
+    background: -webkit-linear-gradient(legacy-direction(to right), #2cdd9b 0%, #1dc8cc 100%);
+    background: -webkit-gradient(linear, left top, right top, from(#2cdd9b), to(#1dc8cc));
+    background: -webkit-linear-gradient(left, #2cdd9b 0%, #1dc8cc 100%);
+    background: -o-linear-gradient(left, #2cdd9b 0%, #1dc8cc 100%);
+    background: linear-gradient(to right, #2cdd9b 0%, #1dc8cc 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-fill-color: transparent;
 }
 
-.profile-page h5.description {
-    max-width: 700px;
-    margin: 20px auto 75px;
+.static-slider3 .btn-success-gradiant {
+		background: #2cdd9b;
+    background: -webkit-linear-gradient(legacy-direction(to right), #2cdd9b 0%, #1dc8cc 100%);
+    background: -webkit-gradient(linear, left top, right top, from(#2cdd9b), to(#1dc8cc));
+    background: -webkit-linear-gradient(left, #2cdd9b 0%, #1dc8cc 100%);
+    background: -o-linear-gradient(left, #2cdd9b 0%, #1dc8cc 100%);
+    background: linear-gradient(to right, #2cdd9b 0%, #1dc8cc 100%);
 }
 
-.profile-page .nav-align-center {
-    margin-top: 30px;
+.static-slider3 .btn-success-gradiant:hover {
+		background: #1dc8cc;
+    background: -webkit-linear-gradient(legacy-direction(to right), #1dc8cc 0%, #2cdd9b 100%);
+    background: -webkit-gradient(linear, left top, right top, from(#1dc8cc), to(#2cdd9b));
+    background: -webkit-linear-gradient(left, #1dc8cc 0%, #2cdd9b 100%);
+    background: -o-linear-gradient(left, #1dc8cc 0%, #2cdd9b 100%);
+    background: linear-gradient(to right, #1dc8cc 0%, #2cdd9b 100%);	
 }
 
-.profile-page .content {
-    max-width: 450px;
-    margin: 0 auto;
+.static-slider3 .btn-md {
+    padding: 15px 45px;
+    font-size: 16px;
 }
 
-.profile-page .content .social-description {
-    display: inline-block;
-    max-width: 150px;
-    width: 145px;
-    text-align: center;
-    margin: 15px 0 0px;
-}
-
-.profile-page .content .social-description h2 {
-    margin-bottom: 15px;
-}
-
-.profile-page .button-container {
-    text-align: center;
-    margin-top: -106px;
-}
-
-.profile-page .collections img {
-    margin-bottom: 30px;
-}
-
-.profile-page .gallery {
-    margin-top: 45px;
-    padding-bottom: 50px;
-}
-
-.h2 {
-    font-size: 2.5em;
-    margin-bottom: 30px;
-}
-
-/* Typewriter effect */
-
-.typewriter h1 {
-    font-family: 'Raleway', sans-serif;
-    padding: 3em 2em;
-    font-size: 3.5em;
-    font-weight: 200;
-    letter-spacing: .17em;
-    margin: 0 auto;
-    overflow: hidden;
-    white-space: nowrap;
-    border-right: .17em solid pink;
-    animation: typing 3.5s steps(30, end), blinking-cursor .5s step-end infinite;
-  }
-  
-  @keyframes typing {
-    from {
-      width: 0
-    }
-    to {
-      width: 100%
-    }
-  }
-  
-  @keyframes blinking-cursor {
-    from,
-    to {
-      border-color: transparent
-    }
-    50% {
-      border-color: pink;
-    }
-  }
-
-/* Profile Page Background Style */
-
-.page-header {
-    height: 100vh;
-    max-height: 1050px;
-    padding: 0;
-    color: #FFFFFF;
-    position: relative;
-    background-position: center center;
-    background-size: cover;
-}
-
-.page-header .btn {
-    width: 140px;
-}
-
-.page-header .page-header-image {
-    position: absolute;
-    background-size: cover;
-    background-position: center center;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-/* Profile Image Style */
-
-@-webkit-keyframes pulsate {
-    0% {
-        -webkit-transform: scale(0.6, 0.6);
-        transform: scale(0.6, 0.6);
-        opacity: 0.0;
-    }
-    50% {
-        opacity: 1.0;
-    }
-    100% {
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
-        opacity: 0.0;
-    }
-}
-
-@keyframes pulsate {
-    0% {
-        -webkit-transform: scale(0.6, 0.6);
-        transform: scale(0.6, 0.6);
-        opacity: 0.0;
-    }
-    50% {
-        opacity: 1.0;
-    }
-    100% {
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
-        opacity: 0.0;
-    }
-}
-
-.cc-profile-image a {
-    position: relative;
-}
-
-.cc-profile-image a:before {
-    content: "";
-    /* background color */
-    border: 15px solid #007bff;
-    border-radius: 50%;
-    height: 180px;
-    width: 180px;
-    position: absolute;
-    left: 0;
-    -webkit-animation: pulsate 1.6s ease-out;
-    animation: pulsate 1.6s ease-out;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    opacity: 0.0;
-    z-index: 99;
-}
-
-.cc-profile-image img {
-    position: relative;
-    border-radius: 50%;
-    height: 180px;
-    width: 180px;
-    padding: 0;
-    margin: 0;
-    border: 15px solid transparent;
-    z-index: 9999;
-    -webkit-transition: all .3s ease-out;
-    transition: all .3s ease-out;
-}
-
-.cc-profile-image a:hover img {
-    -webkit-transform: scale(1.06, 1.06);
-    transform: scale(1.06, 1.06);
-}
-
-.cc-profile-image a:hover:before {
-    -webkit-animation: none;
-    animation: none;
+@media (max-width:767px) {
+	.static-slider3 .title{
+		line-height: 30px;
+		font-size: 24px;
+	}
 }
