--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,4 @@
+/* ----- Banner ----- */
 @import url(//fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800);
 .static-slider3 {
   font-family: "Montserrat", sans-serif;
