--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,24 +1,34 @@
 /* ----- Banner ----- */
 @import url(//fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800);
 .static-slider3 {
-  font-family: "Raleway", sans-serif;
-	color: #8d97ad;
-  font-weight: 300;
-	padding: 10% 0;
+    font-family: "Raleway", sans-serif;
+    color: #8d97ad;
+    font-weight: 300;
+    padding: 3em 2em;
 }
 
-.static-slider3 h1, .static-slider3 h2, .static-slider3 h3, .static-slider3 h4, .static-slider3 h5, .static-slider3 h6 {
-  color: #3e4555;
+.static-slider3 h1 {
+    color: #3e4555;
+    font-weight: 200;
+    margin: 0.4em 0;
+    font-size: 3.5em;
+}
+
+.static-slider3 h2 {
+    color: #3e4555;
+    font-weight: 200;
+    margin: 0.4em 0;
+    font-size: 2em;
 }
 
 .static-slider3 .title {
-	font-weight: 300;
-  line-height: 50px;
-	font-size: 36px;
+    font-weight: 300;
+    line-height: 50px;
+    font-size: 40px;
 }
 
 .static-slider3 .title span {
-	/* border-bottom: 3px solid #000000; */
+  /* border-bottom: 3px solid #000000; */
 }
 
 /*
