--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,7 +24,7 @@
 .static-slider3 .title {
     font-weight: 300;
     line-height: 50px;
-    font-size: 40px;
+    font-size: 3.5em;
 }
 
 .static-slider3 .title span {
