--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,7 +8,7 @@
 }
 
 .static-slider3 h1 {
-    color: #3959a3;
+    color: #3e4555;
     font-weight: 200;
     margin: 0.4em 0;
     font-size: 3.5em;
