--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,6 +32,74 @@
   /* border-bottom: 3px solid #000000; */
 }
 
+.profile-page .page-header {
+    min-height: 550px;
+}
+
+.profile-page .profile-container {
+    color: #FFFFFF;
+}
+
+.profile-page .photo-container {
+    width: 123px;
+    height: 123px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+    -webkit-box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
+}
+
+.profile-page .title {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.profile-page .description,
+.profile-page .category {
+    text-align: center;
+}
+
+.profile-page h5.description {
+    max-width: 700px;
+    margin: 20px auto 75px;
+}
+
+.profile-page .nav-align-center {
+    margin-top: 30px;
+}
+
+.profile-page .content {
+    max-width: 450px;
+    margin: 0 auto;
+}
+
+.profile-page .content .social-description {
+    display: inline-block;
+    max-width: 150px;
+    width: 145px;
+    text-align: center;
+    margin: 15px 0 0px;
+}
+
+.profile-page .content .social-description h2 {
+    margin-bottom: 15px;
+}
+
+.profile-page .button-container {
+    text-align: center;
+    margin-top: -106px;
+}
+
+.profile-page .collections img {
+    margin-bottom: 30px;
+}
+
+.profile-page .gallery {
+    margin-top: 45px;
+    padding-bottom: 50px;
+}
+
 .page-header {
     height: 100vh;
     max-height: 1050px;
@@ -51,72 +119,9 @@
     z-index: -1;
 }
 
-.page-header footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
-
-.page-header .container {
-    height: 100%;
-    z-index: 1;
-    text-align: center;
-    position: relative;
-}
-
-.page-header .container>.content-center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-    padding: 0 15px;
-    color: #FFFFFF;
-    width: 100%;
-    max-width: 880px;
-}
-
-.page-header .category,
-.page-header .description {
-    color: rgba(255, 255, 255, 0.5);
-}
-
 .page-header.page-header-small {
     height: 60vh;
     max-height: 440px;
-}
-
-.page-header:after,
-.page-header:before {
-    position: absolute;
-    z-index: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-    left: 0;
-    top: 0;
-    content: "";
-}
-
-.page-header:before {
-    /* background filter */
-    background-color: rgba(177, 174, 174, 0.5);
-}
-
-.page-header[filter-color="#d0cece"] {
-    background: rgba(236, 229, 229, 0.425);
-    /* For browsers that do not support gradients */
-    /* For Safari 5.1 to 6.0 */
-    /* For Opera 11.1 to 12.0 */
-    /* For Firefox 3.6 to 15 */
-    background: -webkit-gradient(linear, left bottom, left top, from(rgba(236, 229, 229, 0.425)), to(rgba(236, 229, 229, 0.425)));
-    background: linear-gradient(0deg, rgba(236, 229, 229, 0.425), rgba(236, 229, 229, 0.425));
-    /* Standard syntax */
-}
-
-.page-header .container {
-    z-index: 2;
 }
 
 .masthead {
