--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,3 +31,33 @@
 	}
 }
 /* ----- Banner end ----- */
+
+
+
+.profile-page .page-header {
+    min-height: 550px;
+}
+
+.page-header {
+    height: 100vh;
+    max-height: 1050px;
+    padding: 0;
+    color: #FFFFFF;
+    position: relative;
+    background-position: center center;
+    background-size: cover;
+}
+
+.page-header .page-header-image {
+    position: absolute;
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.page-header.page-header-small {
+    height: 60vh;
+    max-height: 440px;
+}
