--- a/static/css/main.css
+++ b/static/css/main.css
@@ -58,9 +58,57 @@
     z-index: -1;
 }
 
+.page-header footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.page-header .container {
+    height: 100%;
+    z-index: 1;
+    text-align: center;
+    position: relative;
+}
+
+.page-header .container>.content-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 0 15px;
+    color: #FFFFFF;
+    width: 100%;
+    max-width: 880px;
+}
+
+.page-header .category,
+.page-header .description {
+    color: rgba(255, 255, 255, 0.5);
+}
+
 .page-header.page-header-small {
     height: 60vh;
     max-height: 440px;
+}
+
+.page-header:after,
+.page-header:before {
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    left: 0;
+    top: 0;
+    content: "";
+}
+
+.page-header:before {
+    /* background filter */
+    background-color: rgba(177, 174, 174, 0.5);
 }
 
 .page-header[filter-color="#d0cece"] {
@@ -72,4 +120,8 @@
     background: -webkit-gradient(linear, left bottom, left top, from(rgba(236, 229, 229, 0.425)), to(rgba(236, 229, 229, 0.425)));
     background: linear-gradient(0deg, rgba(236, 229, 229, 0.425), rgba(236, 229, 229, 0.425));
     /* Standard syntax */
+}
+
+.page-header .container {
+    z-index: 2;
 }
