--- a/static/css/main.css
+++ b/static/css/main.css
@@ -51,7 +51,7 @@
 .page-header .page-header-image {
     position: absolute;
     background-size: cover;
-    background-position: center center;
+    background-position: center top;
     width: 100%;
     height: 100%;
     z-index: -1;
