--- a/static/css/main.css
+++ b/static/css/main.css
@@ -44,7 +44,7 @@
     padding: 0;
     color: #FFFFFF;
     position: relative;
-    background-position: center center;
+    background-position: center top;
     background-size: cover;
 }
 
