--- a/static/css/main.css
+++ b/static/css/main.css
@@ -44,14 +44,14 @@
     padding: 0;
     color: #FFFFFF;
     position: relative;
-    background-position: center top;
+    background-position: center center;
     background-size: cover;
 }
 
 .page-header .page-header-image {
     position: absolute;
     background-size: cover;
-    background-position: center top;
+    background-position: center center;
     width: 100%;
     height: 100%;
     z-index: -1;
