--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,7 @@
+body, html {
+    height: 100%;
+}
+
 /* ----- Banner ----- */
 @import url(//fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800);
 .static-slider3 {
@@ -5,6 +9,10 @@
     color: #8d97ad;
     font-weight: 300;
     padding: 3em 2em;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
 
 .static-slider3 h1 {
@@ -123,4 +131,23 @@
 
 .page-header .container {
     z-index: 2;
+}
+
+
+
+
+
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("static/images/background.jpeg");
+
+  /* Set a specific height */
+  height: 50%;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
