--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,7 +45,7 @@ body, html {
 
 /* Hero image */
 .hero-image {
-    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("static/images/background.jpeg");
 
     /* Set a specific height */
