--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,7 +46,7 @@ body, html {
 /* Hero image */
 .hero-image {
     /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://github.com/kevogil/kevogil.github.io/blob/main/static/images/background.jpeg?raw=true");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("static/images/background.jpeg");
 
     /* Set a specific height */
     height: 50%;
@@ -57,6 +57,4 @@ body, html {
     background-size: cover;
     position: relative;
 
-    /* z-index */
-    z-index: 3;
 }
