--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,7 @@ body, html {
 @import url(//fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800);
 .static-slider3 {
     font-family: "Raleway", sans-serif;
-    color: #8d97ad;
+    color: #dedfe0;
     font-weight: 300;
     padding: 3em 2em;
     top: 50%;
@@ -14,7 +14,7 @@ body, html {
 }
 
 .static-slider3 h1 {
-    color: #3e4555;
+    color: #dedfe0;
     font-weight: 200;
     margin: 0.4em 0;
     font-size: 3.5em;
@@ -46,7 +46,7 @@ body, html {
 /* Hero image */
 .hero-image {
     /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("static/images/background.jpeg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('static/images/background.jpeg');
 
     /* Set a specific height */
     height: 75%;
