--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,7 +46,7 @@ body, html {
 /* Hero image */
 .hero-image {
     /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('./static/images/background.jpeg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/background.jpeg');
 
     /* Set a specific height */
     height: 60%;
