--- a/static/css/main.css
+++ b/static/css/main.css
@@ -23,7 +23,7 @@ body, html {
 .static-slider3 .title {
     line-height: 50px;
     font-size: 3em;
-    font-weight: 400;
+    font-weight: normal;
 }
 
 .static-slider3 .title span {
