--- a/static/css/main.css
+++ b/static/css/main.css
@@ -356,3 +356,11 @@ body, html {
 .bg-primary {
     background-color: #20b2aa !important;
 }
+
+.cc-experience .cc-experience-header {
+    padding-top: 60px;
+    padding-right: 0;
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+}
