--- a/static/css/main.css
+++ b/static/css/main.css
@@ -138,8 +138,7 @@ body, html {
     display: block;
     font-size: 22px;
     text-align: center;
-    color: #FFFFFF;
-    /* color: #01a2a6; */
+    color: #01a2a6;
 }
 .contact .speechBubble strong{
     font-size: 30px;
