--- a/static/css/main.css
+++ b/static/css/main.css
@@ -73,7 +73,7 @@ body, html {
 .me-yellow-bg{ background: #F2D00E;}
 .me-orange-bg{ background: #ff8a2c}
 .me-darkgrey{ background: #1f1f1f;}
-.me-turquoise{ background: #01a2a6}
+.me-turquoise{ background: #A8BDC6}
 
 .contact{
     padding-bottom: 80px;
