--- a/static/css/main.css
+++ b/static/css/main.css
@@ -58,8 +58,8 @@ h2{
 .me-black-bg{ background: #232323 }
 .me-yellow-bg{ background: #F7B733;}
 .me-orange-bg{ background: #FC4A1A}
-.me-lightgrey{ background: #1f1f1f;}
-.me-darkgrey{ background: #DFDCF3;}
+.me-darkgrey{ background: #1f1f1f;}
+.me-lightgrey{ background: #DFDCF3;}
 .me-turquoise{ background: #4ABDAC}
 
 
