--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,6 +62,8 @@ h2{
 .me-lightgrey{ background: #DFDCF3;}
 .me-turquoise{ background: #4ABDAC}
 
+.me-white-text{ color: #FFF }
+
 
 /* ------------------ */
 /*       Banner       */
