--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,7 +59,7 @@ h2{
 .me-yellow-bg{ background: #F7B733;}
 .me-orange-bg{ background: #FC4A1A}
 .me-darkgrey{ background: #1f1f1f;}
-.me-lightgrey{ background: #DFDCF3;}
+.me-lightgrey{ background: #DFDCE3;}
 .me-turquoise{ background: #4ABDAC}
 
 .me-white-text{ color: #FFF }
