--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,7 +19,7 @@ h2{
     font-size: 50px;
     margin-top: 30px;
     margin-bottom: 30px;
-    text-shadow: 2px 2px 5px #adacac;
+    text-shadow: 2px 2px 5px #d3d1d1;
     letter-spacing: 0.2em;
 }
 
