--- a/static/css/main.css
+++ b/static/css/main.css
@@ -421,6 +421,14 @@ h2{
 }
 
 
+/* --------------------------- */
+/*      Education & Skills     */
+/* --------------------------- */
+.education-skills{
+    padding-bottom: 65px;
+}
+
+
 /* --------------- */
 /*      Slider     */
 /* --------------- */
