--- a/static/css/main.css
+++ b/static/css/main.css
@@ -113,10 +113,18 @@ h2{
 }
 
 
-/* --------------------------- */
-/*      Skills & Education     */
-/* --------------------------- */
-.skills-education{
+/* --------------- */
+/*      Skills     */
+/* --------------- */
+.skills{
+    padding-bottom: 65px;
+}
+
+
+/* ------------------ */
+/*      Education     */
+/* ------------------ */
+.education{
     padding-bottom: 65px;
 }
 
