--- a/static/css/main.css
+++ b/static/css/main.css
@@ -217,7 +217,7 @@ h2{
 /* ----------------- */
 /*      Projects     */
 /* ----------------- */
-.project>.card {
+.project .card {
     border: 0;
     border-radius: 0.1875rem;
     display: inline-block;
@@ -229,7 +229,7 @@ h2{
     box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
 }
 
-.project>.card .card-body {
+.project .card .card-body {
     min-height: 100px;
 }
 
