--- a/static/css/main.css
+++ b/static/css/main.css
@@ -245,7 +245,7 @@ figure figcaption {
     padding-right: 0;
     text-align: center;
     align-content: center;
-    color: #fff;
+    color: rgb(255, 194, 194);
 }
 
 
